# Projects

./: .gitignore  README.md  online-sales-data-project.py
Earnings-Intel/: .env  .env.example  .gitignore  Makefile  PROJECT_BRIEF_FOR_LLM.md  PROJECT_BRIEF_FOR_LLM_IMPLEMENTATION.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  netlify.toml  pyproject.toml  requirements.txt
Earnings-Intel/app/: api.py
Earnings-Intel/configs/: data.yaml  features.yaml  model.yaml  project.yaml  retrieval.yaml  web.yaml
Earnings-Intel/models/trained/: elasticnet_tabular.joblib  logreg_tabular.joblib  logreg_tfidf.joblib  majority_class.joblib  mean_regression.joblib  ridge_tfidf.joblib
Earnings-Intel/reports/: data_quality.md  feature_dictionary.md  model_card.md
Earnings-Intel/scripts/: 01_fetch_transcripts_fmp.py  02_fetch_prices.py  03_build_features.py  04_backtest_event_study.py  05_build_retrieval_index.py  06_query_retrieval.py  download_dataset.py  export_to_parquet.py
Earnings-Intel/src/earnings_intel/: __init__.py  event_study.py  io_utils.py  retrieval.py  text_features.py
Earnings-Intel/src/earnings_intel/cleaning/: prices_clean.py  transcripts_clean.py
Earnings-Intel/src/earnings_intel/features/: embeddings.py  lexicons.py  readability.py  sentiment.py  tfidf.py
Earnings-Intel/src/earnings_intel/ingestion/: kaggle_transcripts.py  prices_stooq.py  (+1 more)
Earnings-Intel/web/: app.js  index.html  styles.css
Earnings-Intel/web/data/: events_by_period.json  feature_correlations.json  model_metrics.json  retrieval_chunks.json  summary.json  top_tickers.json
(+223 files in other folders)
